Add findElementByQualityId. Fix issue in PropertyServiceImpl